@@ -208,6 +208,13 @@ abstract class TaskRunner extends Thread {
       vargs.add(TaskTracker.Child.class.getName());  // main of Child
       vargs.add(tracker.taskReportPort + "");        // pass umbilical port
       vargs.add(t.getTaskId());                      // pass task identifier
+      
+      // Add java.library.path; necessary for native-hadoop libraries
+      String libraryPath = System.getProperty("java.library.path");
+      if (libraryPath != null) {
+          vargs.add("-Djava.library.path=" + libraryPath);
+      }
+      
       // Run java
       runChild((String[])vargs.toArray(new String[0]), workDir);
     } catch (FSError e) {
